--- a/Assignment2PartA.html
+++ b/Assignment2PartA.html
@@ -319,7 +319,19 @@
    <br>
 
    
-  
+  <p>\begin{equation}
+Y_S=A_S L_S
+\end{equation}
+\begin{equation}
+w_S=A_S\
+\end{equation}
+\begin{align}
+Y_M=A_M K^\alpha L_M ^{1-\alpha}\
+w_M=[1-\alpha]\frac{Y_M}{L_M}\
+L=L_M+L_S\
+w_M=\phi w_S\
+\dot{K}= s_\pi [Y_M-w_M L_M ]-\delta K
+\end{align}</p>
           
 </p>
 <div id="eq-euler" class="equation para-block" style="line-adjust:0"><span class="equation-before"><span class="equation-label">(1)</span></span>
